fix minor layout issues

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,7 +3,7 @@
     margin-bottom: 0.75rem;
 }
 
-h1#welcome {
+h1 {
     font-weight: 900;
     font-size: 3rem;
     margin-top: 1.2rem;
@@ -24,4 +24,12 @@ h1#welcome {
     width: 100%;
     border-radius: 3rem;
     padding: 0.6rem;
+}
+
+#preview {
+    margin-bottom: 5rem;
+}
+
+#your-link-text {
+    word-wrap: break-word;
 }
